--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <title>PIRCBELFORT - Personal Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
-      /* Hide the QR code image initially */
       #qr-code {
-        display: none;
+        display: none; /* Initially hidden */
+      }
+      #blog {
+        background-color: #ffffff;
+        color: #000000;
+      }
+      .service-description {
+        color: #4a5568;
       }
     </style>
     <script>
       function showQRCode() {
-        document.getElementById('qr-code').style.display = 'block';
+        document.getElementById('qr-code').style.display = 'block'; // Show QR code
       }
     </script>
   </head>
@@ -34,54 +40,71 @@
 
     <!-- Hero Section -->
     <section class="bg-blue-100 text-center py-20">
-      <h2 class="text-4xl font-bold mb-4">Welcome to My Website</h2>
+      <h2 class="text-5xl font-bold mb-4">Welcome to My Website</h2>
       <p class="text-lg text-gray-700">I design clean and user-friendly websites that help businesses grow online.</p>
     </section>
 
     <!-- About Section -->
     <section id="about" class="py-12 px-6 md:px-20">
-      <h2 class="text-3xl font-bold text-center mb-6">About Me</h2>
-      <p class="text-gray-700 text-center max-w-3xl mx-auto">
+      <h2 class="text-4xl font-bold text-center mb-6">About Me</h2>
+      <p class="text-gray-700 text-center max-w-3xl mx-auto text-lg">
         Hi, I'm Faheem — a passionate web designer who creates beautiful, functional, and responsive websites. I love working with clients to bring their visions to life through design.
       </p>
     </section>
 
     <!-- Services Section -->
     <section id="services" class="bg-white py-12 px-6 md:px-20">
-      <h2 class="text-3xl font-bold text-center mb-6">My Services</h2>
+      <h2 class="text-4xl font-bold text-center mb-6">My Services</h2>
       <div class="grid md:grid-cols-3 gap-8 text-center">
-        <div class="p-6 bg-blue-50 rounded-lg shadow">
+        <div class="p-6" style="background-color: #d6f0ff; border-radius: 0.5rem; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);">
           <h3 class="text-xl font-semibold mb-2">Web Design</h3>
-          <p>I design clean, engaging websites that work perfectly on all devices.</p>
+          <p class="service-description">I design clean, engaging websites that work perfectly on all devices.</p>
         </div>
-        <div class="p-6 bg-blue-50 rounded-lg shadow">
+        <div class="p-6" style="background-color: #e3ffe6; border-radius: 0.5rem; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);">
           <h3 class="text-xl font-semibold mb-2">Responsive Design</h3>
-          <p>Your website will look great on desktops, tablets, and phones.</p>
+          <p class="service-description">Your website will look great on desktops, tablets, and phones.</p>
         </div>
-        <div class="p-6 bg-blue-50 rounded-lg shadow">
+        <div class="p-6" style="background-color: #fff0f5; border-radius: 0.5rem; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);">
           <h3 class="text-xl font-semibold mb-2">Brand Identity</h3>
-          <p>I help you create a strong visual identity that reflects your brand.</p>
+          <p class="service-description">I help you create a strong visual identity that reflects your brand.</p>
         </div>
       </div>
     </section>
 
     <!-- Blog Section (Updated) -->
-    <section id="blog" class="bg-white py-12 px-6 md:px-20">
-      <h2 class="text-3xl font-bold text-center mb-6">Personal Blog</h2>
-      <article class="max-w-3xl mx-auto text-gray-700 leading-relaxed">
+    <section id="blog" class="py-12 px-6 md:px-20">
+      <h2 class="text-4xl font-bold text-center mb-6">Personal Blog</h2>
+
+      <!-- Faheem's Blog -->
+      <article class="max-w-3xl mx-auto leading-relaxed">
         <h3 class="text-2xl font-semibold mb-2">Why Good Design is More Than Just Looks</h3>
-        <p class="text-sm text-gray-500 mb-4">May 28, 2025 &nbsp; • &nbsp; Faheem</p>
+        <p class="text-sm mb-4">May 28, 2025 &nbsp; • &nbsp; Faheem</p>
         <p class="mb-4">
           Many think a good website is all about beautiful colors and stylish fonts. But design is much more than that.
           A great website should be user-friendly, fast, mobile-ready, and tell the brand's story clearly. In my designs,
           I always focus on the user experience — because that’s what really matters in the end.
         </p>
       </article>
+
+      <!-- Imaad's Blog -->
+      <article class="max-w-3xl mx-auto leading-relaxed mt-12">
+        <h3 class="text-2xl font-semibold mb-2">Designing for Humans, Not Just Screens</h3>
+        <p class="text-sm mb-4">May 30, 2025 &nbsp; • &nbsp; Imaad</p>
+        <p class="mb-4">
+          In the race for modern design, we often forget the most important element — the human behind the screen.
+          Good design isn’t just clean or fast; it’s intuitive, emotional, and empathetic. It should anticipate user needs and feel effortless.
+          Whether it's a portfolio, an app, or an online store, if your user feels frustrated, you’ve already lost them.
+        </p>
+        <p class="mb-4">
+          That’s why I always ask: Who is this for? What will they feel here?
+          Designing with empathy leads to experiences people remember — and come back to.
+        </p>
+      </article>
     </section>
 
     <!-- Order Section -->
     <section id="order" class="bg-white py-12 px-6 md:px-20">
-      <h2 class="text-3xl font-bold text-center mb-6">Order Now</h2>
+      <h2 class="text-4xl font-bold text-center mb-6">Order Now</h2>
       <p class="text-center text-gray-700 mb-4">
         To place your order, please pay ₹1500 using the QR code below.
       </p>
@@ -94,14 +117,14 @@
 
     <!-- Contact Section -->
     <section id="contact" class="bg-blue-100 py-12 px-6 md:px-20">
-      <h2 class="text-3xl font-bold text-center mb-6">Contact Me</h2>
-      <p class="text-center text-gray-700 mb-6">
+      <h2 class="text-4xl font-bold text-center mb-6">Contact Me</h2>
+      <p class="text-center text-gray-700 mb-6 text-lg">
         Interested in working together? Let's connect.
       </p>
-      <form class="max-w-xl mx-auto space-y-4">
-        <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded border border-gray-300" />
-        <input type="email" placeholder="Your Email" class="w-full px-4 py-2 rounded border border-gray-300" />
-        <textarea placeholder="Your Message" class="w-full px-4 py-2 rounded border border-gray-300"></textarea>
+      <form action="https://formspree.io/f/xjkrbyka" method="POST" class="max-w-xl mx-auto space-y-4">
+        <input type="text" name="name" placeholder="Your Name" class="w-full px-4 py-2 rounded border border-gray-300" required />
+        <input type="email" name="email" placeholder="Your Email" class="w-full px-4 py-2 rounded border border-gray-300" required />
+        <textarea name="message" placeholder="Your Message" class="w-full px-4 py-2 rounded border border-gray-300" required></textarea>
         <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">Send Message</button>
       </form>
     </section>
@@ -112,3 +135,5 @@
     </footer>
   </body>
 </html>
+
+
