--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PIRCBELFORT - Personal Portfolio</title>
+
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="pircbelfort.github.io" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
     <style>
       #qr-code {
         display: none; /* Initially hidden */
@@ -17,6 +28,7 @@
         color: #4a5568;
       }
     </style>
+
     <script>
       function showQRCode() {
         document.getElementById('qr-code').style.display = 'block'; // Show QR code
@@ -71,7 +83,7 @@
       </div>
     </section>
 
-    <!-- Blog Section (Updated) -->
+    <!-- Blog Section -->
     <section id="blog" class="py-12 px-6 md:px-20">
       <h2 class="text-4xl font-bold text-center mb-6">Personal Blog</h2>
 
@@ -134,4 +146,4 @@
       <p>&copy; 2025 PIRCBELFORT. All rights reserved.</p>
     </footer>
   </body>
-</html>
+</html>                          
