--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <section id="contact" class="bg-blue-100 py-12 px-6 md:px-20">
       <h2 class="text-4xl font-bold text-center mb-6">Contact Me</h2>
       <p class="text-center text-gray-700 mb-6 text-lg">
-        Interested in working together? Let's connect.
+        Want a professional website? Contact me.
       </p>
       <form action="https://formspree.io/f/xjkrbyka" method="POST" class="max-w-xl mx-auto space-y-4">
         <input type="text" name="name" placeholder="Your Name" class="w-full px-4 py-2 rounded border border-gray-300" required />
