--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PIRCBELFORT - Personal Portfolio</title>
                                 
-   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+   <link rel="icon" href="favicon.png" type="image/x-icon>
+  
     
     <!-- PWA Configuration -->
     <link rel="manifest" href="/site.webmanifest">
