--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+   <!-- Favicon (Browser tab icon) -->
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+
+<!-- Apple Touch Icon (iPhone/iPad home screen) -->
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+<!-- Web App Manifest Icons -->
+<link rel="icon" type="image/png" sizes="192x192" href="web-app-manifest-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="web-app-manifest-512x512.png">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PIRCBELFORT-Thread The Web</title>
