--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   <!-- Favicon (Browser tab icon) -->
-<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+   <!-- Favicon for browser tab -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
-<!-- Apple Touch Icon (iPhone/iPad home screen) -->
+<!-- Android Chrome -->
+<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+
+<!-- Apple Devices -->
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-<!-- Web App Manifest Icons -->
-<link rel="icon" type="image/png" sizes="192x192" href="web-app-manifest-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="web-app-manifest-512x512.png">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
